Initial alpha release for testing

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,6 @@
             ]
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "beta",
     "version": "0.1.0-alpha"
 }
