--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,6 @@
                 "BaraaDark\\LaravelFilter\\Providers\\LaravelFilterServiceProvider"
             ]
         }
-    }
+    },
+    "version": "1.0.0"
 }
